# AFL-Tipping

./: .gitignore  AFL Analysis.ipynb  Makefile  README.md  benchmarks.md  elo_rating.py  games_current.csv  pyproject.toml
.github/workflows/: test.yaml
agent_notes/: 2026-02-07_avenues-exploration-outcomes.md  2026-02-07_better-model-rethink.md  2026-02-07_experiment-mae-audit.md  2026-02-07_follow-attached-recommendations.md  2026-02-07_ground-up-model-redesign.md  2026-02-07_hybrid-benchmark-improvement.md  2026-02-07_team-residual-lineup-leakage-fix.md  2026-02-08-lineup-market-feature-integration.md  2026-02-08-lineup-strength-v2.md  2026-02-08-mae24-feasibility.md  2026-02-08-market-residual-redesign.md  2026-02-08-pr-creation.md  2026-02-08_market-residual-corrector-optimization.md
elo_ratings/: calculate_elo_rating.py  elo_ratings.csv  predict_with_elo.py
reports_baseline/: mae_summary.csv  walk_forward_predictions.csv
reports_rethink/: mae_summary.csv  walk_forward_predictions.csv
scrape_afl/: scrape_data.py
src/: requirements.txt
src/elo_ratings/: elo.py  predict_with_elo.py
src/mae_model/: __init__.py  build_match_context.py  run_backtest.py  sequential_margin.py
src/outputs/: afl.csv  afl_betting_history.xlsx  afl_data.csv  afl_match_context.csv
src/scrape_afl/: scrape_data.py  scrape_tables.py  scraping_index.txt
tests/: test_build_match_context.py  test_scrape_afl.py  test_scrape_tables.py  test_sequential_margin_model.py
tests/test_data/: afl_tables_2012.html  afl_tables_2012_gf.html  afl_tables_match.html  afl_tables_nm_gws.html  (+2 more)
